<resources>
    <string name="app_name" translatable="false">Bantumi</string>

    <string name="txtPlayer1">Jugador 1</string>
    <string name="txtPlayer2">Jugador 2</string>

    <!-- Valores del juego -->
    <string name="txtInitialScore" translatable="false">0</string>

    <!-- Mensaje opción sin implementar -->
    <string name="txtSinImplementar">¡No implementado aún!</string>

    <!-- Opciones -->
    <string name="txtReiniciarPartida">Reiniciar</string>
    <string name="txtOpcionGuardar">Guardar Partida</string>
    <string name="txtOpcionRecuperar">Recuperar Partida</string>
    <string name="txtOpcionMejoresResultados">Mejores Resultados</string>

    <!-- Acerca de -->
    <string name="aboutText">Acerca de</string>
    <string name="aboutTitle">¿Cómo se juega?</string>
    <string name="aboutMessage"><p>Cada jugador elige una de sus 6 casillas -que no puede estar vacía-, recoge
        todas las semillas que contenga y las “siembra” una a una en sentido contrario a las agujas del reloj
        en las siguientes casillas del tablero (excepto en el almacén del oponente). Se aplican las siguientes reglas:</p>
        <ul>
            <li>Si la siembra termina en el almacén propio, el jugador vuelve a tener el turno</li>
            <li>Si la siembra termina en una casilla propia que estuviera vacía, se lleva al almacén
                propio la última semilla y las que hubiera en la casilla opuesta del otro jugador</li>
            <li>El juego termina en el momento en que cualquiera de los dos jugadores tenga todas sus
                casillas vacías. Si el contrario dispone de semillas, éstas pasarán al almacén del propietario
                de las casillas</li>
        </ul>
        <p>Gana el jugador que consiga en su almacén el mayor número de semillas</p>
    </string>

    <!-- Preferencias -->
    <string name="preferencesText">Ajustes</string>
    <string name="title_activity_settings">Ajustes</string>
    <string name="prefTituloCategoria1">Datos personales</string>
    <string name="prefTituloNombreJugador">Nombre del jugador</string>
    <string name="prefTextoNombreJugador">Pulse para teclear el nombre del jugador</string>
    <string name="prefTituloCategoria2">Ajustes del juego</string>
    <string name="prefTituloCategoria3">Más información…</string>
    <string name="key_PlayerName" translatable="false">pref_PlayerName</string>
    <string name="key_SeedNumber" translatable="false">pref_SeedNumber</string>
    <string name="key_UseExternalStorage" translatable="false">pref_UseExternalStorage</string>
    <string name="default_PlayerName">Jugador 1</string>
    <string name="default_SeedNumber" translatable="false">4</string>
    <string name="prefTitleUseExternalStorage">Usar almacenamiento externo</string>
    <string name="prefTitleSeedNumber">Número de semillas</string>
    <string-array name="seeds_options">
        <item>2 Semillas</item>
        <item>3 Semillas</item>
        <item>4 Semillas</item>
        <item>5 Semillas</item>
        <item>6 Semillas</item>
    </string-array>
    <string-array name="seeds_values">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
    <string name="key_Player2Start" translatable="false">pref_Player2Start</string>
    <string name="prefTitlePlayer2Start">Primer turno de Jugador 2</string>
    <string name="key_UseSecondaryTheme" translatable="false">pref_UseSecondaryTheme</string>
    <string name="prefTitleUseSecondaryTheme">Usar tema secundario</string>
    <string name="preferencesFile" translatable="false">es.upm.miw.bantumi_preferences</string>

    <!-- Diálogo Final -->
    <string name="txtDialogoFinalTitulo">Fin del juego</string>
    <string name="txtDialogoFinalPregunta">¿Desea jugar otra partida?</string>

    <!-- Reiniciar Partida -->
    <string name="txtDialogoReiniciarTitulo">Reiniciar partida</string>
    <string name="txtDialogoReiniciarPregunta">¿Desea reiniciar la partida?</string>

    <!-- Guardar Partida -->
    <string name="default_SavedGamesFileName" translatable="false">saved_games.txt</string>
    <string name="txtExternalStorageError">ERROR: No es posible acceder a la memoria externa</string>
    <string name="txtSaveGameSuccess">Partida guardada con éxito</string>
    <string name="txtSaveGameFailure">ERROR: No ha sido posible guardar la partida</string>

    <!-- Cargar Partida -->
    <string name="txtLoadGameSuccess">Partida cargada con éxito</string>
    <string name="txtLoadGameFailure">ERROR: No ha sido posible cargar la partida</string>
    <string name="txtLoadGameEmpty">No existen partidas guardadas</string>

    <!-- Mejores 10 Resultados -->
    <string name="title_activity_topten">Mejores 10 Resultados</string>
    <string name="txtDialogoEliminarResultadosTitulo">Eliminar resultados</string>
    <string name="txtDialogoEliminarResultadosPregunta">¿Está seguro de que desea eliminar todos los resultados almacenados? Esta acción es irreversible.</string>
</resources>