<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/prefTituloCategoria1">

        <EditTextPreference
            app:key="@string/key_PlayerName"
            app:title="@string/prefTituloNombreJugador"
            app:summary="@string/prefTextoNombreJugador"
            app:defaultValue="@string/default_PlayerName"   />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/prefTituloCategoria2">

        <ListPreference
            app:key="@string/key_SeedNumber"
            app:title="@string/prefTitleSeedNumber"
            app:entries="@array/seeds_options"
            app:entryValues="@array/seeds_values"
            app:defaultValue="4"
            app:useSimpleSummaryProvider="true"
            />

        <SwitchPreferenceCompat
            app:key="@string/key_Player2Start"
            app:title="@string/prefTitlePlayer2Start" />

        <SwitchPreferenceCompat
            app:key="@string/key_UseExternalStorage"
            app:title="@string/prefTitleUseExternalStorage" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/prefTituloCategoria3">

    </PreferenceCategory>

</PreferenceScreen>